# entservices-displaysettings

./: ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/skills/openspec-coverage/: SKILL.md  openspec_coverage.py
.github/skills/openspec-propose/: SKILL.md
.github/skills/openspec-templater/: SKILL.md  spec_template.md
.github/workflows/: L1-tests.yml  L2-tests.yml  native_full_build.yml
DeviceSettings/: Audio.cpp  Audio.h  CMakeLists.txt  CompositeIn.cpp  CompositeIn.h  DSContoller.h  DSController.cpp  DSController.h  DSProductTraitsHandler.cpp  DSProductTraitsHandler.h  DSPwrEventListener.cpp  DSPwrEventListener.h  DeviceSettings.conf.in  DeviceSettings.config  DeviceSettings.cpp  DeviceSettings.h  DeviceSettingsAudioImplementation.cpp  DeviceSettingsAudioImplementation.h  DeviceSettingsCompositeInImplementation.cpp  DeviceSettingsCompositeInImplementation.h  DeviceSettingsDisplayImplementation.cpp  DeviceSettingsDisplayImplementation.h  DeviceSettingsFPDImplementation.cpp  DeviceSettingsFPDImplementation.h  DeviceSettingsHALConfig.cpp  DeviceSettingsHALConfig.h  DeviceSettingsHdmiInImplementation.cpp  DeviceSettingsHdmiInImplementation.h  DeviceSettingsHostImplementation.cpp  DeviceSettingsHostImplementation.h  DeviceSettingsImplementation.cpp  DeviceSettingsImplementation.h  DeviceSettingsTypes.h  DeviceSettingsVideoDeviceImplementation.cpp  DeviceSettingsVideoDeviceImplementation.h  DeviceSettingsVideoPortImplementation.cpp  DeviceSettingsVideoPortImplementation.h  Display.cpp  Display.h  HdmiIn.cpp  (+10 more)
DeviceSettings/hal/: dAudio.h  dAudioImpl.h  dCompositeIn.h  dCompositeInImpl.h  dDisplay.h  dDisplayImpl.h  dFPD.h  dFPDImpl.h  dHdmiIn.h  dHdmiInImpl.h  dHost.h  dHostImpl.h  dVideoDevice.h  dVideoDeviceImpl.h  dVideoPort.h  dVideoPortImpl.h
Tests/L1Tests/: CMakeLists.txt
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: DisplaySettings_L2Test.cpp
UserPlugin/: CMakeLists.txt  Log.txt  Module.h  UserPlugin.conf.in  UserPlugin.config  UserPlugin.cpp  UserPlugin.h
helpers/: PluginInterfaceBuilder.h  UtilsSearchRDKProfile.cpp  UtilsSearchRDKProfile.h  UtilsString.h
openspec/: config.yaml  spec_coverage.md
openspec/changes/archive/2026-04-14-get-supported-resolutions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-get-supported-resolutions/specs/supported-resolutions-query/: spec.md
openspec/changes/archive/2026-04-29-get-supported-resolutions/: design.md
openspec/changes/archive/2026-04-29-get-supported-resolutions/specs/displaysettings-spec/: spec.md
openspec/changes/get-supported-resolutions/: design.md  proposal.md  tasks.md
openspec/changes/get-supported-resolutions/specs/displaysettings-spec/: spec.md
openspec/specs/: displaysettings-spec.md  spec_coverage.md
plugin/: CMakeLists.txt  DisplaySettings.cpp  DisplaySettings.h
